# Pdos-PdAndro

./: .gitignore  LICENSE.txt  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cod5/pdos_pdandro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ls.c  pdos.c
app/src/main/cpp/bios/arm64-v8a/: CMakeLists.txt  nothing.c
app/src/main/cpp/bios/armeabi-v7a/: CMakeLists.txt  a_out.h  bios.c  exeload.c
app/src/main/cpp/bios/x86/: CMakeLists.txt  __os.h  exeload.h  pos.h
app/src/main/cpp/bios/x86_64/: CMakeLists.txt
app/src/main/cpp/pdpclib/armeabi-v7a/: CMakeLists.txt  __memmgr.c  armsupa.asm  limits.h  linstart.c  math.c  math.h  pgastart.c  signal.h  start.c  time.c
app/src/main/cpp/pdpclib/x86/: CMakeLists.txt  assert.h  ctype.h  errno.c  errno.h  linsupa.asm  locale.h  setjmp.c  setjmp.h  signal.c  stdarg.h  stddef.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  time.h
app/src/main/java/com/cod5/pdos_pdandro/: Console.kt  MainActivity.kt  ScreenChar.kt  ScreenRow.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/raw/: hi.txt  index.html  main.js  pcomm.arm  pdos.arm  styles.css
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cod5/pdos_pdandro/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
